[package]
name = "birdsound_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
sha2 = "0.10.8"
libsecp256k1 = "0.7.1"
getrandom = { version = "0.2", features = ["custom"] }
